// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar should render empty top bar if no mappings set 1`] = `
<div>
  <section
    class="top-bar svelte-1y25f5"
  >
    <div
      class="container svelte-1y25f5"
    >
       
      <div
        class="no-filters svelte-112u3yn"
      />
      
    </div>
  </section>
</div>
`;

exports[`TopBar should render the top bar 1`] = `
<div>
  <section
    class="top-bar svelte-1y25f5"
  >
    <div
      class="container svelte-1y25f5"
    >
       
      <section
        class="svelte-112u3yn"
      >
        <div
          class="report-filter svelte-112u3yn"
        >
          <div
            class="filter-selector svelte-112u3yn"
            data-testid="display-modal-button"
          >
            <div
              class="icon-wrapper  svelte-112u3yn"
            >
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 20px; --icon-height: 20px;"
              >
                <object
                  src="ic-filter.svg/"
                />
              </div>
            </div>
             
            <div>
              No filters applied
            </div>
          </div>
           
          <div
            class="filter-chips svelte-112u3yn"
          />
           
        </div>
      </section>
      
    </div>
  </section>
</div>
`;

exports[`TopBar should render top bar if at least one mapping is set 1`] = `
<div>
  <section
    class="top-bar svelte-1y25f5"
  >
    <div
      class="container svelte-1y25f5"
    >
       
      <section
        class="svelte-112u3yn"
      >
        <div
          class="report-filter svelte-112u3yn"
        >
          <div
            class="filter-selector svelte-112u3yn"
            data-testid="display-modal-button"
          >
            <div
              class="icon-wrapper  svelte-112u3yn"
            >
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 20px; --icon-height: 20px;"
              >
                <object
                  src="ic-filter.svg/"
                />
              </div>
            </div>
             
            <div>
              No filters applied
            </div>
          </div>
           
          <div
            class="filter-chips svelte-112u3yn"
          />
           
        </div>
      </section>
      
    </div>
  </section>
</div>
`;
